--- a/Views/HelloWorld/Index.cshtml
+++ b/Views/HelloWorld/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Hello World";
 }
 
-<h2>Index</h2>
+<h2>Hello Word</h2>
 
 <p>Hello from our View Template!</p>
