--- a/Views/TourSites/Delete.cshtml
+++ b/Views/TourSites/Delete.cshtml
@@ -24,10 +24,16 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Coordinates)
+            @Html.DisplayNameFor(model => model.Longitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Coordinates)
+            @Html.DisplayFor(model => model.Longitude)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Lattitude)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Lattitude)
         </dd>
     </dl>
     
