--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -38,7 +38,7 @@
             @* </td> *@
             <td>
                 <a asp-action="Update" asp-route-id="@item.Id">Update</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                 @* <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
             </td>
         </tr>
