--- a/Views/Role/Update.cshtml
+++ b/Views/Role/Update.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "UPDATE ROLE";
 }
 
-<h1 class="bg-info text-white">Update Role</h1>
+<h1>Update Role</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -12,27 +12,16 @@
     <input type="hidden" name="roleName" value="@Model.Role.Name" />
     <input type="hidden" name="roleId" value="@Model.Role.Id" />
 
-    <h2 class="bg-info p-1 text-white">Add To @Model.Role.Name</h2>
+    <h2>Add To @Model.Role.Name</h2>
     <table class="table table-bordered table-sm">
-        @if (Model.NonMembers.Count() == 0)
-        {
-            <tr><td colspan="2">All Users Are Members</td></tr>
-        }
-        else
-        {
-            @foreach (TourWebsiteUser user in Model.NonMembers)
-            {
-                <tr>
-                    <td>@user.UserName</td>
-                    <td>
-                        <input type="checkbox" name="AddIds" value="@user.Id">
-                    </td>
-                </tr>
-            }
-        }
+        <div type="email" class="form-group">
+            <label name="AddEmail" class="control-label"></label>
+            <input name="AddEmail" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
     </table>
 
-    <h2 class="bg-info p-1 text-white">Remove From @Model.Role.Name</h2>
+    <h2>Remove From @Model.Role.Name</h2>
     <table class="table table-bordered table-sm">
         @if (Model.Members.Count() == 0)
         {
