--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -32,6 +32,11 @@
                 <input asp-for="Lattitude" class="form-control" />
                 <span asp-validation-for="Lattitude" class="text-danger"></span>
             </div>
+            <div type="email" class="form-group">
+                <label name="AddEmail" class="control-label"></label>
+                <input name="AddEmail" class="form-control" />
+                @* <span asp-validation-for="Email" class="text-danger"></span> *@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
