--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TourWebsite.Models.TourSite
+﻿@using TourWebsite.Areas.Identity.Data
+@model TourWebsite.Models.Tours.TourEdit
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,27 +13,64 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" />
-                <span asp-validation-for="Longitude" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Lattitude" class="control-label"></label>
-                <input asp-for="Lattitude" class="form-control" />
-                <span asp-validation-for="Lattitude" class="text-danger"></span>
-            </div>
+            <input type="hidden" name="TourID" value="@Model.TourSite.Id" />
+            <table class="table table-bordered table-sm">
+                <div class="form-group">
+                    <label name="TourName" class="control-label"></label>
+                    <input name="TourName" class="form-control" value="@Model.TourSite.Title" />
+                    <span asp-validation-for="TourSite.Title" class="text-danger"></span>
+                </div>
+            </table>
+            <table class="table table-bordered table-sm">
+                <div class="form-group">
+                    <label name="TourDescription" class="control-label"></label>
+                    <input name="TourDescription" class="form-control" value="@Model.TourSite.Description" />
+                    <span asp-validation-for="TourSite.Description" class="text-danger"></span>
+                </div>
+            </table>
+            <table class="table table-bordered table-sm">
+                <div class="form-group">
+                    <label name="Longitude" class="control-label"></label>
+                    <input name="Longitude" class="form-control" value="@Model.TourSite.Longitude" />
+                    <span asp-validation-for="TourSite.Longitude" class="text-danger"></span>
+                </div>
+            </table>
+            <table class="table table-bordered table-sm">
+                <div class="form-group">
+                    <label name="Lattitude" class="control-label"></label>
+                    <input name="Lattitude" class="form-control" value="@Model.TourSite.Lattitude" />
+                    <span asp-validation-for="TourSite.Lattitude" class="text-danger"></span>
+                </div>
+            </table>
+
+            <table class="table table-bordered table-sm">
+                <div type="email" class="form-group">
+                    <label name="AddEmail" class="control-label"></label>
+                    <input name="AddEmail" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+            </table>
+
+            <h2>Remove From @Model.TourSite.Title</h2>
+            <table class="table table-bordered table-sm">
+                @if (Model.Members.Count() == 0)
+                {
+                    <tr><td colspan="2">No Users Are Members</td></tr>
+                }
+                else
+                {
+                    @foreach (TourWebsiteUser user in Model.Members)
+                    {
+                        <tr>
+                            <td>@user.UserName</td>
+                            <td>
+                                <input type="checkbox" name="DeleteIds" value="@user.Id">
+                            </td>
+                        </tr>
+                    }
+                }
+            </table>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
