visibility controls on the tour page

--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>TourSite</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="TourID" value="" />
@@ -20,10 +20,10 @@
                     <span asp-validation-for="TourSite.Title" class="text-danger"></span>
                 </div>
             </table>
-            <table class="table table-bordered table-sm">
+            <table class="table table-bordered">
                 <div class="form-group">
                     <label name="TourDescription" class="control-label">Description</label>
-                    <input name="TourDescription" class="form-control" value="" />
+                    <textarea id="tiny" name="TourDescription" class="form-control" value=""></textarea>
                     <span asp-validation-for="TourSite.Description" class="text-danger"></span>
                 </div>
             </table>
