--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -10,7 +10,7 @@
 <h4>TourSite</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="TourID" value="@Model.TourSite.Id" />
@@ -24,7 +24,8 @@
             <table class="table table-bordered table-sm">
                 <div class="form-group">
                     <label name="TourDescription" class="control-label">Description</label>
-                    <input name="TourDescription" class="form-control" value="@Model.TourSite.Description" />
+                    <input id="descriptionVal", type="hidden" class="form-control" value="@Model.TourSite.Description" />
+                    <textarea id="tiny" name="TourDescription" class="form-control"></textarea>
                     <span asp-validation-for="TourSite.Description" class="text-danger"></span>
                 </div>
             </table>
@@ -117,6 +118,26 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script>
+
+    var text = document.getElementById('descriptionVal').value;
+        console.log(text);
+
+        tinymce.init({
+
+        selector: 'textarea#tiny',
+        license_key: 'gpl',
+        promotion: false,
+            setup: function (editor) {
+              editor.on('init', function (e) {
+                editor.setContent(text);
+              });
+        }
+        });
+</script>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+
 }
