--- a/Views/TourSites/Index.cshtml
+++ b/Views/TourSites/Index.cshtml
@@ -1,58 +1,90 @@
-﻿@model IEnumerable<TourWebsite.Models.TourSite>
+﻿@using Microsoft.AspNetCore.Authorization
+@model ValueTuple<List<TourWebsite.Models.TourSite>, IAuthorizationService>
 
 @{
     ViewData["Title"] = "Index";
+    var authService = Model.Item2;
+
+    AuthorizationResult authorized1 = await authService.AuthorizeAsync(User, null, "TourAccess");
+
 }
 
 <h1>Tours</h1>
 
+
+
 <p>
-    <a asp-action="Create">Create New</a>
+
+    @if (authorized1.Succeeded)
+    {
+        <a asp-action="Create">Create New!</a>
+    }
+
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Longitude)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Lattitude)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Visibility)
-            </th>
-            <th></th>
-        </tr>
+        @foreach (var item in Model.Item1)
+        {
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.Longitude)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.Lattitude)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.Visibility)
+                </th>
+
+                <th></th>
+            </tr>
+
+
+            break;
+        }
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Longitude)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Lattitude)
-            </td>
+        @foreach (var item in Model.Item1) {
+
+
+            var allowedUsers1 = item.ApprovedUsers;
+            AuthorizationResult authorized2 = await authService.AuthorizeAsync(User, allowedUsers1, "TourAccess"); //Who can view this
+
+            var allowedUsers2 = item.ApprovedEditUsers;
+            AuthorizationResult authorized3 = await authService.AuthorizeAsync(User, allowedUsers2, "TourAccess"); //Who can edit this
+
+            if (!authorized2.Succeeded && !authorized3.Succeeded)
+                continue;
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                @* <td> *@
+                @*     @Html.DisplayFor(modelItem => item.Description) *@
+                @* </td> *@
+                <td>
+                    @Html.DisplayFor(modelItem => item.Longitude)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Lattitude)
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Visibility)
                 </td>
-            <td>
+                <td>
 
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                    @if (authorized3.Succeeded){ //If given edit privledges
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a><b> | </b>
+                    }
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    @if (authorized1.Succeeded) //If you are an admin or editor, you can delete
+                    { //If given edit privledges
+                        <b> | </b><a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    }
             </td>
         </tr>
 }
