--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Manage User Roles</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@* <p> *@
+@*     <a asp-action="Create">Create New</a> *@
+@* </p> *@
 <table class="table">
     <thead>
         <tr>
@@ -37,8 +37,8 @@
             @*     @Html.DisplayFor(modelItem => item.ConcurrencyStamp) *@
             @* </td> *@
             <td>
-                <a asp-action="Update" asp-route-id="@item.Id">Update</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Update" asp-route-id="@item.Id">Update</a>
+                @* <a asp-action="Details" asp-route-id="@item.Id">Details</a> *@
                 @* <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
             </td>
         </tr>
