--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>TourSite</h4>
+<h4>Tours</h4>
 <hr />
 <div class="row">
     <div class="col-md-8">
@@ -66,6 +66,18 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+    //Init rich text
+
+           tinymce.init({
+
+           selector: 'textarea#tiny',
+           license_key: 'gpl',
+           promotion: false
+           });
+</script>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
