lists on rich text

--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -71,9 +71,10 @@
     //Init rich text
 
            tinymce.init({
-
            selector: 'textarea#tiny',
            license_key: 'gpl',
+               plugins: 'lists',
+    toolbar: 'numlist bullist',
            promotion: false
            });
 </script>
