--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -134,6 +134,8 @@
 
         selector: 'textarea#tiny',
         license_key: 'gpl',
+            plugins: 'lists',
+    toolbar: 'numlist bullist',
         promotion: false,
             setup: function (editor) {
               editor.on('init', function (e) {
