--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    
+<div>
+    <h4>Hello, welcome to the tour management website. Head to <a asp-controller="TourSites" asp-action="Index">tour sites</a> to see what tours are available.</h4>
 </div>
