--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 
 
     @* TinyMCE text editor *@
-        <script type="text/javascript" src="~/js/tinymce/tinymce.min.js"/>
+    <script type="text/javascript" src="~/js/tinymce/tinymce.min.js"> </script>
 
 </head>
 <body>
@@ -34,7 +34,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TourSites" asp-action="Index">Tour Sites</a>
