to .net 8 for faster builds

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -4,3 +4,11 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+
+<MapView Longitude="_longitude" Latitude="_latitude" Zoom="11" Style="height: 400px; width: 100%;">
+    <WebMap>
+        <PortalItem Id="4a6cb60ebbe3483a805999d481c2daa5" />
+    </WebMap>
+    <ScaleBarWidget Position="OverlayPosition.BottomLeft" />
+</MapView>
