--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TourWebsite</title>
     <script type="importmap"></script>
+
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TourWebsite.styles.css" asp-append-version="true" />
@@ -19,6 +21,13 @@
 
     @* TinyMCE text editor *@
     <script type="text/javascript" src="~/js/tinymce/tinymce.min.js"> </script>
+
+
+    @* Blazor Map*@
+
+    <link href="_content/dymaptic.GeoBlazor.Core" />
+    <link href="_content/dymaptic.GeoBlazor.Core/assets/esri/themes/light/main.css" rel="stylesheet" />
+
 
 </head>
 <body>
