--- a/Views/TourSites/Index.cshtml
+++ b/Views/TourSites/Index.cshtml
@@ -10,83 +10,16 @@
 }
 
 <h1>Tours</h1>
+<a asp-action="ListView">List View</a>        
+<br />
 
-
-
-<p>
-
-    @if (authorized1.Succeeded)
-    {
-        <a asp-action="Create">Create New!</a>
-    }
-
-</p>
-<table class="table">
-    <thead>
-        @foreach (var item in Model.Item1)
-        {
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(modelItem => item.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(modelItem => item.Longitude)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(modelItem => item.Lattitude)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(modelItem => item.Visibility)
-                </th>
-
-                <th></th>
-            </tr>
-
-
-            break;
-        }
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Item1) {
-
-
-            var allowedUsers1 = item.ApprovedUsers;
-            AuthorizationResult authorized2 = await authService.AuthorizeAsync(User, allowedUsers1, "TourAccess"); //Who can view this
-
-            var allowedUsers2 = item.ApprovedEditUsers;
-            AuthorizationResult authorized3 = await authService.AuthorizeAsync(User, allowedUsers2, "TourAccess"); //Who can edit this
-
-            if ((!authorized2.Succeeded && !authorized3.Succeeded) && item.Visibility != VisibilityType.Public) //Always show public
-                continue;
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                @* <td> *@
-                @*     @Html.DisplayFor(modelItem => item.Description) *@
-                @* </td> *@
-                <td>
-                    @Html.DisplayFor(modelItem => item.Longitude)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Lattitude)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Visibility)
-                </td>
-                <td>
-
-
-                    @if (authorized3.Succeeded){ //If given edit privledges
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a><b> | </b>
-                    }
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    @if (authorized1.Succeeded) //If you are an admin or editor, you can delete
-                    { //If given edit privledges
-                        <b> | </b><a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    }
-            </td>
-        </tr>
+@if (authorized1.Succeeded)
+{
+    <label class="control-label">Longitude</label>
+    <input id="long" class="form-control" value="" />
+    <label class="control-label">Latitude</label>
+    <input id="lat" class="form-control" value="" />
 }
-    </tbody>
-</table>
+@section Map {
+    <div id="viewDiv"></div>
+}
