--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 @inject TourWebsiteContext tourSiteContext
 
 @{
-    AuthorizationResult authorized1 = await auth.AuthorizeAsync(User, "AdminAccess");
+    AuthorizationResult authorized = await auth.AuthorizeAsync(User, "AdminAccess");
 }
 <head>
     <meta charset="utf-8" />
@@ -44,7 +44,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TourSites" asp-action="Index">Tour Sites</a>
                         </li>
-                        @if (authorized1.Succeeded)
+                        @if (authorized.Succeeded)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Administration</a>
@@ -84,13 +84,34 @@
 
 
     @{
-        var toursites = tourSiteContext.TourSites;
+
+        AuthorizationResult authorized1 = await auth.AuthorizeAsync(User, null, "TourAccess"); //If has full access
+
+
+
+
+        var toursites = tourSiteContext.TourSites; 
 
         var longLat = new List<double[]>();
+
+        var visible = new List<bool>();
+
+        var editable = new List<bool>();
 
         foreach (var site in toursites)
         {
             longLat.Add([site.Longitude, site.Lattitude]);
+
+            var allowedUsers1 = site.ApprovedUsers;
+            AuthorizationResult authorized2 = await auth.AuthorizeAsync(User, allowedUsers1, "TourAccess"); //Who can view this
+
+            var allowedUsers2 = site.ApprovedEditUsers;
+            AuthorizationResult authorized3 = await auth.AuthorizeAsync(User, allowedUsers2, "TourAccess"); //Who can edit this
+
+            if (authorized2.Succeeded || authorized3.Succeeded || (site.Visibility == VisibilityType.Public)) //Always show public
+                visible.Add(true);
+            else
+                visible.Add(false);
 
         }
     }
@@ -135,16 +156,20 @@
 
 
 
-            var longlat = "@Json.Serialize(longLat)";
 
-            var existingPoints = JSON.parse(longlat);
-
+            var existingPoints = JSON.parse("@Json.Serialize(longLat)");
+            var pointVisibility = JSON.parse("@Json.Serialize(visible)");
 
  
 
 
-            for (var ePoint of existingPoints) {
+            for (let i = 0; i < existingPoints.length; i++){
 
+
+                ePoint = existingPoints[i];
+
+                if (!pointVisibility[i])
+                    continue;
 
                 var pointOnTheMap1 = new Graphic({
                     symbol: simpleMarkerSymbol
